src/parser/parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Main: peg$parseMain },
      peg$startRuleFunction  = peg$parseMain,

      peg$c0 = function(version, before, service, after) { return {"type": "root", version, service, functionsBefore: before, functionsAfter: after}; },
      peg$c1 = "allow",
      peg$c2 = peg$literalExpectation("allow", false),
      peg$c3 = "if",
      peg$c4 = peg$literalExpectation("if", false),
      peg$c5 = "match",
      peg$c6 = peg$literalExpectation("match", false),
      peg$c7 = "rules_version",
      peg$c8 = peg$literalExpectation("rules_version", false),
      peg$c9 = "=",
      peg$c10 = peg$literalExpectation("=", false),
      peg$c11 = "'",
      peg$c12 = peg$literalExpectation("'", false),
      peg$c13 = ";",
      peg$c14 = peg$literalExpectation(";", false),
      peg$c15 = function(vn, comment) { return {"type": "version", "version": vn, comment}; },
      peg$c16 = "1",
      peg$c17 = peg$literalExpectation("1", false),
      peg$c18 = "2",
      peg$c19 = peg$literalExpectation("2", false),
      peg$c20 = "service",
      peg$c21 = peg$literalExpectation("service", false),
      peg$c22 = "cloud.firestore",
      peg$c23 = peg$literalExpectation("cloud.firestore", false),
      peg$c24 = "firebase.storage",
      peg$c25 = peg$literalExpectation("firebase.storage", false),
      peg$c26 = "{",
      peg$c27 = peg$literalExpectation("{", false),
      peg$c28 = "}",
      peg$c29 = peg$literalExpectation("}", false),
      peg$c30 = function(type, content) { return {"type": "service", "head": ["service", type], "content": content}; },
      peg$c31 = function(left, right) { return right ? [left, ...right.map(v => v[1])] : [left]; },
      peg$c32 = function(path, matcherBody) { return {"type": "match", path, "content": matcherBody}; },
      peg$c33 = ":",
      peg$c34 = peg$literalExpectation(":", false),
      peg$c35 = function(scopes, content) { return { "type": "allow", scopes, content }; },
      peg$c36 = ",",
      peg$c37 = peg$literalExpectation(",", false),
      peg$c38 = function(mainsope, morescopes) { return [mainsope, ...morescopes.flatMap(x => x).filter(x => x && x !== "," && x !== "")] },
      peg$c39 = "write",
      peg$c40 = peg$literalExpectation("write", false),
      peg$c41 = "read",
      peg$c42 = peg$literalExpectation("read", false),
      peg$c43 = "get",
      peg$c44 = peg$literalExpectation("get", false),
      peg$c45 = "list",
      peg$c46 = peg$literalExpectation("list", false),
      peg$c47 = "update",
      peg$c48 = peg$literalExpectation("update", false),
      peg$c49 = "delete",
      peg$c50 = peg$literalExpectation("delete", false),
      peg$c51 = "create",
      peg$c52 = peg$literalExpectation("create", false),
      peg$c53 = function(c1, cn) { return [c1, cn].flatMap(x => x).filter(x => x && x !== "");},
      peg$c54 = "&&",
      peg$c55 = peg$literalExpectation("&&", false),
      peg$c56 = "||",
      peg$c57 = peg$literalExpectation("||", false),
      peg$c58 = function(condOp, cond) { return {"type": "connection", "operator": condOp, "content": Array.isArray(cond) ? cond.flatMap(x => x).filter(x => x && x !== "") : cond}; },
      peg$c59 = "!",
      peg$c60 = peg$literalExpectation("!", false),
      peg$c61 = function(condition) { return condition; },
      peg$c62 = "(",
      peg$c63 = peg$literalExpectation("(", false),
      peg$c64 = ")",
      peg$c65 = peg$literalExpectation(")", false),
      peg$c66 = function(left, operation, right) { return { "type": "operation", "left": [left].flatMap(x => x), operation, "right": [right].flatMap(x => x)}; },
      peg$c67 = "is",
      peg$c68 = peg$literalExpectation("is", false),
      peg$c69 = function(left, right) { return { "type": "operation", "left": [left].flatMap(x => x), "operation": "is", "right": [{"type": "text", "text": right}]}; },
      peg$c70 = function(vs) { return vs; },
      peg$c71 = function() { return {"type": "text", "text": text()} },
      peg$c72 = function() {},
      peg$c73 = "[",
      peg$c74 = peg$literalExpectation("[", false),
      peg$c75 = "]",
      peg$c76 = peg$literalExpectation("]", false),
      peg$c77 = function(statement) { return {"type": "text", "text": text()}; },
      peg$c78 = ".",
      peg$c79 = peg$literalExpectation(".", false),
      peg$c80 = function(left, right) { return [left, right]; },
      peg$c81 = function(fc) { return fc; },
      peg$c82 = function() { return {"type": "text", "text": text()}; },
      peg$c83 = function() { return { "type": "Array", values: []}; },
      peg$c84 = function(l1, ln) { return [l1, ln].flatMap(x => x).filter(x => x && x !== "," && x !== "");  },
      peg$c85 = function() { return { "type": "text", "text": text() }; },
      peg$c86 = "function",
      peg$c87 = peg$literalExpectation("function", false),
      peg$c88 = function(name, params, body) { return {"type": "function-declaration", name, params, "content": body.flatMap(x => x)}; },
      peg$c89 = "/",
      peg$c90 = peg$literalExpectation("/", false),
      peg$c91 = function(first, following) { return "/" + first + following.flatMap(x => x).join(""); },
      peg$c92 = function() { return text(); },
      peg$c93 = "=**",
      peg$c94 = peg$literalExpectation("=**", false),
      peg$c95 = function(p1, pn) { return [p1, ...pn.flatMap(x => x).filter(x => x && x !== "," && x !== "")]; },
      peg$c96 = "let",
      peg$c97 = peg$literalExpectation("let", false),
      peg$c98 = function(name, content) { return { "type": "variable-declaration", name, content }; },
      peg$c99 = "return",
      peg$c100 = peg$literalExpectation("return", false),
      peg$c101 = function(content, comment) { return { "type": "return", "content": Array.isArray(content) ? content.flatMap(x => x) : content, comment };},
      peg$c102 = function(name, params) { return { "type": "function-call", name, params }; },
      peg$c103 = function(left, right) { return [left, ...right.map(v => v[2])]; },
      peg$c104 = "$(",
      peg$c105 = peg$literalExpectation("$(", false),
      peg$c106 = function() { return text() },
      peg$c107 = "==",
      peg$c108 = peg$literalExpectation("==", false),
      peg$c109 = "!=",
      peg$c110 = peg$literalExpectation("!=", false),
      peg$c111 = "<=",
      peg$c112 = peg$literalExpectation("<=", false),
      peg$c113 = ">=",
      peg$c114 = peg$literalExpectation(">=", false),
      peg$c115 = "<",
      peg$c116 = peg$literalExpectation("<", false),
      peg$c117 = ">",
      peg$c118 = peg$literalExpectation(">", false),
      peg$c119 = /^[^']/,
      peg$c120 = peg$classExpectation(["'"], true, false),
      peg$c121 = function(chars) { return chars.flatMap(x => x).join(""); },
      peg$c122 = function(first, second) { return first + second.flatMap(x => x).join(""); },
      peg$c123 = /^[a-zA-Z0-9_]/,
      peg$c124 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c125 = function(chars) { return chars.join(""); },
      peg$c126 = function(comment) { return comment;},
      peg$c127 = peg$otherExpectation("comment"),
      peg$c128 = "//",
      peg$c129 = peg$literalExpectation("//", false),
      peg$c130 = peg$anyExpectation(),
      peg$c131 = function(comment) { return { "type": "comment", "text": comment.flatMap(x => x).join("").trim()}; },
      peg$c132 = function() { return { type: "Literal", value: parseFloat(text()) }; },
      peg$c133 = "0",
      peg$c134 = peg$literalExpectation("0", false),
      peg$c135 = /^[\-]/,
      peg$c136 = peg$classExpectation(["-"], false, false),
      peg$c137 = /^[0-9]/,
      peg$c138 = peg$classExpectation([["0", "9"]], false, false),
      peg$c139 = /^[1-9]/,
      peg$c140 = peg$classExpectation([["1", "9"]], false, false),
      peg$c141 = "bool",
      peg$c142 = peg$literalExpectation("bool", false),
      peg$c143 = "bytes",
      peg$c144 = peg$literalExpectation("bytes", false),
      peg$c145 = "constraint",
      peg$c146 = peg$literalExpectation("constraint", false),
      peg$c147 = "duration",
      peg$c148 = peg$literalExpectation("duration", false),
      peg$c149 = "float",
      peg$c150 = peg$literalExpectation("float", false),
      peg$c151 = "int",
      peg$c152 = peg$literalExpectation("int", false),
      peg$c153 = "latlng",
      peg$c154 = peg$literalExpectation("latlng", false),
      peg$c155 = "set",
      peg$c156 = peg$literalExpectation("set", false),
      peg$c157 = "number",
      peg$c158 = peg$literalExpectation("number", false),
      peg$c159 = "map",
      peg$c160 = peg$literalExpectation("map", false),
      peg$c161 = "string",
      peg$c162 = peg$literalExpectation("string", false),
      peg$c163 = "timestamp",
      peg$c164 = peg$literalExpectation("timestamp", false),
      peg$c165 = "path",
      peg$c166 = peg$literalExpectation("path", false),
      peg$c167 = "map_diff",
      peg$c168 = peg$literalExpectation("map_diff", false),
      peg$c169 = /^[\n\r\u2028\u2029]/,
      peg$c170 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c171 = peg$otherExpectation("end of line"),
      peg$c172 = "\n",
      peg$c173 = peg$literalExpectation("\n", false),
      peg$c174 = "\r\n",
      peg$c175 = peg$literalExpectation("\r\n", false),
      peg$c176 = "\r",
      peg$c177 = peg$literalExpectation("\r", false),
      peg$c178 = "\u2028",
      peg$c179 = peg$literalExpectation("\u2028", false),
      peg$c180 = "\u2029",
      peg$c181 = peg$literalExpectation("\u2029", false),
      peg$c182 = peg$otherExpectation("required_whitespace"),
      peg$c183 = /^[ \t\n\r]/,
      peg$c184 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c185 = peg$otherExpectation("whitespace"),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseMain() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseVersion();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseFunction();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseFunction();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseService();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseFunction();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parseFunction();
            }
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0(s1, s2, s4, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseAllowToken() {
    var s0;

    if (input.substr(peg$currPos, 5) === peg$c1) {
      s0 = peg$c1;
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    return s0;
  }

  function peg$parseIfToken() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c3) {
      s0 = peg$c3;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    return s0;
  }

  function peg$parseMatchToken() {
    var s0;

    if (input.substr(peg$currPos, 5) === peg$c5) {
      s0 = peg$c5;
      peg$currPos += 5;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c6); }
    }

    return s0;
  }

  function peg$parseVersionToken() {
    var s0;

    if (input.substr(peg$currPos, 13) === peg$c7) {
      s0 = peg$c7;
      peg$currPos += 13;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c8); }
    }

    return s0;
  }

  function peg$parseVersion() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parseVersionToken();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 39) {
              s5 = peg$c11;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseVersionNumber();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 39) {
                  s7 = peg$c11;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c12); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 59) {
                      s9 = peg$c13;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c14); }
                    }
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseEOL();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c15(s6, s10);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseVersionNumber() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 49) {
      s0 = peg$c16;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }
    if (s0 === peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 50) {
        s0 = peg$c18;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
    }

    return s0;
  }

  function peg$parseService() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c20) {
      s1 = peg$c20;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c21); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 15) === peg$c22) {
          s3 = peg$c22;
          peg$currPos += 15;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 16) === peg$c24) {
            s3 = peg$c24;
            peg$currPos += 16;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c25); }
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseEOL();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c26;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c27); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseEOL();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseContent();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseEOL();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c28;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c29); }
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseEOL();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c30(s3, s7);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseContent() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseMatcher();
    if (s1 === peg$FAILED) {
      s1 = peg$parseFunction();
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseMatcher();
        if (s5 === peg$FAILED) {
          s5 = peg$parseFunction();
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseMatcher();
          if (s5 === peg$FAILED) {
            s5 = peg$parseFunction();
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c31(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseMatcher() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
